--- a/package.json
+++ b/package.json
@@ -9,24 +9,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@splinetool/react-spline": "^4.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/themes": "^3.0.0",
+    "@sentry/react": "^10.22.0",
+    "@sentry/tracing": "^7.120.4",
+    "@splinetool/react-spline": "^4.1.0",
+    "@supabase/supabase-js": "^2.76.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.18",
     "framer-motion": "^11.0.0",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.363.0",
-    "tailwind-merge": "^2.2.0"
+    "papaparse": "^5.5.3",
+    "razorpay": "^2.9.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^3.3.0",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.2.0",
+    "typescript": "^5.9.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
